@@ -1,3 +1,12 @@
+2024-11-26  Martin Elff <martin@elff.eu>
+
+	* pkg/R/mblogit.R: Fix construction of ZD-matrix in
+	'predict.mmblogit'
+
+2024-10-06  Martin Elff <martin@elff.eu>
+
+	* pkg/inst/ChangeLog: Add autogenerated changelog
+
 2024-10-06  Martin Elff <martin@elff.eu>
 
 	* pkg/DESCRIPTION: Declare vignette builder packages
